[gd_scene load_steps=29 format=3 uid="uid://cb4imvcmsnpwr"]

[ext_resource type="Script" path="res://ship/Ship.gd" id="1"]
[ext_resource type="FontFile" path="res://common/fonts/small.tres" id="2"]
[ext_resource type="Texture2D" uid="uid://cdwqqfbjaw7ov" path="res://ship/textures/crown.png" id="3"]
[ext_resource type="FontFile" path="res://common/fonts/tiny.tres" id="4"]
[ext_resource type="Texture2D" uid="uid://0we7ggorp2tp" path="res://ship/textures/flame.png" id="10"]
[ext_resource type="Texture2D" uid="uid://b88f8y7u4xll5" path="res://ship/textures/ship.png" id="14"]
[ext_resource type="Texture2D" uid="uid://4kjrkob0db43" path="res://ship/textures/turret.png" id="15"]
[ext_resource type="Texture2D" uid="uid://dk2i1w8xdlmsq" path="res://ship/textures/muzzle-flash.png" id="16"]
[ext_resource type="PackedScene" path="res://ship/trail.tscn" id="17"]
[ext_resource type="Texture2D" uid="uid://bsrsfp1u14tro" path="res://ship/textures/flare.png" id="29"]

[sub_resource type="PhysicsMaterial" id="1"]
friction = 0.8
bounce = 0.5

[sub_resource type="Animation" id="2"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rm7i2"]
_data = {
"default": SubResource("2")
}

[sub_resource type="CanvasItemMaterial" id="3"]
blend_mode = 1

[sub_resource type="Animation" id="4"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_05hdd"]
_data = {
"default": SubResource("4")
}

[sub_resource type="Animation" id="5"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cef1o"]
_data = {
"default": SubResource("5")
}

[sub_resource type="Animation" id="6"]
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d72cg"]
_data = {
"thrust": SubResource("6")
}

[sub_resource type="CanvasItemMaterial" id="7"]
blend_mode = 1

[sub_resource type="Animation" id="8"]
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flash:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 5]
}

[sub_resource type="Animation" id="9"]
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flash:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6, 11]
}

[sub_resource type="Animation" id="10"]
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flash:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [12, 17]
}

[sub_resource type="Animation" id="11"]
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("flash:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [18, 23]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_th1mc"]
_data = {
"flash-a": SubResource("8"),
"flash-b": SubResource("9"),
"flash-c": SubResource("10"),
"flash-d": SubResource("11")
}

[sub_resource type="Animation" id="12"]
resource_name = "default"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("chat:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 3.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("chat:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_odbxj"]
_data = {
"default": SubResource("12")
}

[node name="ship" type="RigidBody2D" groups=["player"]]
z_index = 10
collision_mask = 3
mass = 2.0
physics_material_override = SubResource("1")
gravity_scale = 0.0
max_contacts_reported = 5
contact_monitor = true
can_sleep = false
linear_damp = 1.0
angular_damp = 1.0
script = ExtResource("1")

[node name="collision" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-12, -4, -9, -4, -6, -12, -3, -12, -2, -10, -2, -7, 1, -7, 9, -2, 9, 2, 1, 7, -2, 7, -2, 10, -3, 12, -6, 12, -9, 4, -12, 4)

[node name="flame" type="Sprite2D" parent="."]
position = Vector2(-13, -5.84121e-07)
rotation = 1.5708
texture = ExtResource("10")
offset = Vector2(0, 16)
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="flame"]
autoplay = "default"
libraries = {
"": SubResource("AnimationLibrary_rm7i2")
}

[node name="flare" type="Sprite2D" parent="flame"]
z_index = 1
material = SubResource("3")
position = Vector2(1.07288e-05, 2)
texture = ExtResource("29")

[node name="flameStarboard" type="Sprite2D" parent="."]
position = Vector2(7, 11)
rotation = -0.261799
scale = Vector2(0.420149, 0.420149)
texture = ExtResource("10")
hframes = 4
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="flameStarboard"]
autoplay = "default"
libraries = {
"": SubResource("AnimationLibrary_05hdd")
}

[node name="flamePort" type="Sprite2D" parent="."]
position = Vector2(7, -11)
rotation = -2.90339
scale = Vector2(0.420149, 0.420149)
texture = ExtResource("10")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="flamePort"]
autoplay = "default"
libraries = {
"": SubResource("AnimationLibrary_cef1o")
}

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="hull" type="Sprite2D" parent="Sprite2D"]
texture = ExtResource("14")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D/hull"]
libraries = {
"": SubResource("AnimationLibrary_d72cg")
}

[node name="turret" type="Sprite2D" parent="Sprite2D"]
texture = ExtResource("15")

[node name="Tween" type="Tween" parent="Sprite2D/turret"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
editor_description = ""
script = null

[node name="flash" type="Node2D" parent="."]
visible = false
position = Vector2(-3, 0)

[node name="flash" type="Sprite2D" parent="flash"]
material = SubResource("7")
position = Vector2(29, 0)
texture = ExtResource("16")
hframes = 6
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="flash"]
libraries = {
"": SubResource("AnimationLibrary_th1mc")
}

[node name="trail" parent="." instance=ExtResource("17")]
modulate = Color(0, 0.6, 1, 1)
position = Vector2(-6, 11)
MAX_LENGTH = 20

[node name="trail2" parent="." instance=ExtResource("17")]
modulate = Color(0, 0.6, 1, 1)
position = Vector2(-6, -11)
MAX_LENGTH = 20

[node name="shootTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="shieldEnergyTimer" type="Timer" parent="."]
one_shot = true

[node name="ui" type="Node2D" parent="."]

[node name="crown" type="Sprite2D" parent="ui"]
position = Vector2(0, -45)
scale = Vector2(2, 2)
texture = ExtResource("3")

[node name="username" type="Label" parent="ui"]
offset_left = -64.0
offset_top = -32.0
offset_right = 65.0
offset_bottom = -18.0
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 8
text = "username"
horizontal_alignment = 1
vertical_alignment = 1

[node name="kills" type="Label" parent="ui"]
offset_left = -64.0
offset_top = 23.0
offset_right = 65.0
offset_bottom = 37.0
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 8
text = "kills: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="chat" type="Label" parent="ui"]
visible = false
offset_left = 23.0
offset_top = -9.0
offset_right = 124.0
offset_bottom = 10.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 8
vertical_alignment = 1
autowrap_mode = 2
max_lines_visible = 2

[node name="chatAnim" type="AnimationPlayer" parent="ui"]
libraries = {
"": SubResource("AnimationLibrary_odbxj")
}

[node name="aimRaycast" type="RayCast2D" parent="."]
target_position = Vector2(360, 0)

[connection signal="body_entered" from="." to="." method="_on_ship_body_entered"]
